# rclcppyy

./: .flake8  .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  RELEASING.md  fix_cppyy_api_path.sh  package.xml  pixi.toml  setup.py  workspace_activation.sh
.github/workflows/: ci.yml  release.yml
docs/bt_kit/: BT.CPP_KIT.md  KIT.md  REPORT.md  WHY.md
docs/control_kit/: CONTROL_KIT.md  REPORT.md  WHY.md
docs/kits/: ARCHITECTURE_V2.md  COMMON_PATTERNS.md  FREEZE.md
docs/moveit_kit/: MOVEIT_KIT.md  REPORT.md  WHY.md
docs/nav2_kit/: NAV2_KIT.md  REPORT.md  WHY.md
docs/ompl_kit/: OMPL_KIT.md  REPORT.md  WHY.md
docs/pcl_kit/: PCL_KIT.md  REPORT.md  WHY.md
docs/tf/: REPORT.md
docs/tutorials/: vision_loop_closure.md
docs/vision/: CUDA_OPENCV.md  REPORT.md
rclcppyy/: __init__.py  _autoaccel_boot.py  _hook_boot.py  autoaccel.py  bringup_rclcpp.py  hook.py  monkey.py  monkeypatch_messages.py  node.py  rosbag2_cpp.py  rosbag2_py_compat.py  serialization.py  tf.py
rclcppyy/kits/: __init__.py  bt_kit.py  control_kit.py  cppyy_kit.py  cv_kit.py  dbow_kit.py  freeze.py  moveit_kit.py  nav2_kit.py  ompl_kit.py  pcl_kit.py
recipe/: build.sh  recipe.yaml
roscon_uk_2025/: pointcloud.rviz  reliability_override.yaml
roscon_uk_2025/presentation/: 0_setup_pointcloud.sh  1_pointcloud_passthrough.py  2_pointcloud_voxelgrid.py  3_cloudini_cli.py  4_gstreamer_cli.py  5_hypothesis_test.py
scripts/: bag2bag_cppyy_hybrid.py  bag2bag_cppyy_purecpp.py  bag2bag_py_images.py  bench_rosbag2_cpp_vs_py.py  bench_rosbag2_py_apis.py  create_stubs.py  target
scripts/benchmarks/: bench_pub_rclcppyy.py  bench_pub_rclcppyy_monkeypatch.py  bench_pub_rclpy.py  bench_sub_rclcppyy.py  bench_sub_rclcppyy_monkeypatch2.py  bench_sub_rclcppyy_monkeypatched.py  bench_sub_rclpy.py  run_benchmarks.py
scripts/big_messages_demos/: demo_images.py  images_sub.py
scripts/bt_kit_demos/: bench_bt.py  t01_first_tree.py  t02_ports.py  t03_mixed_tree.py
scripts/control_kit_demos/: bench_control_loop.py  d01_mock_rig.py  d02_python_controller.py
scripts/datasets/: dataset_publisher.py  download_orbvoc.py  download_tum_rgbd.py  synthetic_loop.py
scripts/freeze/: bench_freeze.py  build_bt_pch.py  build_l2_node.py  l2_approach_object.cpp  l2_diff.py  run_frozen.py
scripts/heavy_hz_demo/: _hz_common.py  heavy_publisher.py  hz_subscriber.py  run_heavy_hz.py  run_topic_hz_cli.py  startup_probe.py
scripts/moveit_kit_demos/: bench_moveit.py  d01_robot_state.py  d02_plan_pose_goal.py
scripts/nav2_kit_demos/: bench_nav2_plan.py  d01_plan_grid.py  d02_own_nav_stack.py
scripts/ompl_kit_demos/: bench_ompl_validity.py  d01_first_plan.py  d02_publish_path.py
scripts/pcl_kit_demos/: bench_pcl_pipeline.py  d01_voxel_numpy.py  d02_ros_pipeline.py  d03_baseline_rclpy.py
scripts/ros_tutorials/: publisher_member_function.py
scripts/tf_demos/: bench_tf.py  d01_lookup_example.py  tf_listener_bench.py  tf_storm_publisher.py
scripts/vision/: bench_vision.py  (+9 more)
test/: _clean_exit_helper.py  _freeze_helper.py  _monkeypatch_helper.py  _pubsub_nested_helper.py  _pubsub_plain_helper.py  _pubsub_primitive_array_helper.py  _run_helper.py  test_autoaccel.py  test_bringup.py  test_bt_freeze.py  test_bt_kit.py  test_clean_exit.py  test_control_kit.py  test_cppyy_kit.py  test_heavy_hz_demo.py  test_hook.py  test_kit_shims.py  test_monkeypatch.py  test_moveit_kit.py  test_nav2_kit.py  test_node.py  test_ompl_kit.py  test_pubsub_roundtrip.py  test_serialization_parity.py  test_tf.py  test_vision_kits.py  test_vision_loop.py  test_vision_viz.py
(+7 files in other folders)
