<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclcppyy</name>
  <version>0.1.0</version>
  <description>rclcpp bindings via cppyy and examples on how to use cppyy in ROS2</description>
  <maintainer email="sammypfeiffer@gmail.com">Sam Pfeiffer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- cppyy is required (rclcppyy/bringup_rclcpp.py, node.py, serialization.py, etc.)
       but has no rosdep key; it is installed via conda-forge/pip. -->
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
